2013-02-06  Gavin SALAM  <salam@tycho.lpthe.jussieu.fr> + Matteo

	* configure (makefileinc):
	the .Makefile.inc file now has variables to override the install
	and check scripts (intended to help possible future changes +
	standalone functionality).

	* scripts/internal/check.sh -> utils/check.sh
	* scripts/internal/install-sh -> utils/install-sh
	moved these into a separate directory so that in the tarball we
	include utils, but can completely discard scripts/

	* scripts/internal/Template/Makefile:
	this has been updated to use scripts in utils/*

	* scripts/internal/generate-html-contents.pl: 
	now includes a link to the directory for the contrib

	* configure: 
	fixed bug in output of prefix to .Makefile.inc (wasn't being
	output when it was derived from fastjet-config).

	* contribs.svn: 
	JetFFMoments -> tags/0.99.1

	* scripts/internal/release-fjcontrib.sh : 
	fixed typo in checking of existing version; before asking about a
	release it now lists the contrib versions.

	* VERSION 
	upped to 0.001 for more testing

2013-02-01  Gavin Salam  <gavin.salam@cern.ch>

	* contribs.svn: 
	GenericSubtractor -> 0.99.1
	JetFFMoments      -> 0.99

	* configure:
	* Makefile.in:
	* scripts/internal/Template/Makefile:
	variables are now communicated to sub-directory Makefiles via a
	.Makefile.inc; trunks of JetFFMoments and GenericSubtractor also
	modified.

	* scripts/internal/release-fjcontrib.sh: 
	contents now lives in a separate directory

	* scripts/update-contribs.sh:
	no longer query if the contrib isn't yet there.

2013-02-01  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/internal/package.sh: (well... mostly Matteo)
	added a simple script to package a tarball

2013-01-31  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/internal/release-fjcontrib.sh:
	  . removed unneeded developer and svn-users files from the
	    tarball
	  . fixed a few typos and trivial bugs
	  . check which fastjet-config to use when running tests